# final-year-project-team_po_emailextractionapp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.ps1
.claude/: settings.local.json
.streamlit/: config.toml
Old Project/: README.md  app.py  auth.py  bert_classifier.py  config.py
apps/: __init__.py
apps/api/: main.py  token_store.py
apps/api/routes/: auth.py  classifier.py  emails.py  extraction.py  inbox.py  sync.py
apps/streamlit_app/: main.py  theme.py
apps/streamlit_app/pages/: classifier.py  extraction.py  inbox.py  settings.py
classifier/: __init__.py  dataset.py  features.py  loader.py  predict.py  service.py  train.py
config/: settings.py
domain/: __init__.py  pipeline.py  schemas.py
extraction/: __init__.py  body.py  export.py  image_tables.py  merge.py  ocr.py  service.py  tables.py
integrations/: __init__.py  auth.py  graph_client.py
storage/: __init__.py  blob.py
storage/db/: __init__.py  models.py  repositories.py  session.py
workers/: __init__.py  queue.py  run.py  tasks.py
