[project]
name = "po-email-intelligence"
version = "0.1.0"
description = "Outlook inbox reader with email classification and structured extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "rq>=2.0.0",
    "python-multipart>=0.0.12",
    "cryptography>=43.0.0",
    "msal>=1.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "workers*", "integrations*", "classifier*", "extraction*", "domain*", "storage*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"
